// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-1y24kta-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-1900itf-Child-StyledFlexBox-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-18zpoqr-StyledText-lead-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-18zpoqr-StyledText-lead-variantStyles.cache-18zpoqr-StyledText-lead-variantStyles {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-55v6gi-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-55v6gi-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-55v6gi-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-1y24kta-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="elb23zt1 cache-1900itf-Child-StyledFlexBox-StyledTitleContainer e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-18zpoqr-StyledText-lead-variantStyles"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-55v6gi-BorderedBox-StyledBox elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-1y24kta-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-1900itf-Child-StyledFlexBox-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-18zpoqr-StyledText-lead-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-18zpoqr-StyledText-lead-variantStyles.cache-18zpoqr-StyledText-lead-variantStyles {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-1rh7aiq-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #390171;
  opacity: inherit;
  cursor: default;
}

.cache-1rh7aiq-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-1rh7aiq-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-1y24kta-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="elb23zt1 cache-1900itf-Child-StyledFlexBox-StyledTitleContainer e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-18zpoqr-StyledText-lead-variantStyles"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-1rh7aiq-BorderedBox-StyledBox elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-1y24kta-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-1900itf-Child-StyledFlexBox-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-18zpoqr-StyledText-lead-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-18zpoqr-StyledText-lead-variantStyles.cache-18zpoqr-StyledText-lead-variantStyles {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-5qi24d-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-5qi24d-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-5qi24d-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-1y24kta-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="elb23zt1 cache-1900itf-Child-StyledFlexBox-StyledTitleContainer e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-18zpoqr-StyledText-lead-variantStyles"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-5qi24d-BorderedBox-StyledBox elb23zt0"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-1y24kta-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-1900itf-Child-StyledFlexBox-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-18zpoqr-StyledText-lead-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-18zpoqr-StyledText-lead-variantStyles.cache-18zpoqr-StyledText-lead-variantStyles {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-f7t8ij-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-f7t8ij-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-f7t8ij-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-1y24kta-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="elb23zt1 cache-1900itf-Child-StyledFlexBox-StyledTitleContainer e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-18zpoqr-StyledText-lead-variantStyles"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-f7t8ij-BorderedBox-StyledBox elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
